# agent-gateway-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
.sdk/def/: agent-gateway_0.1.0.json
.sdk/model/: sdk.aontu  sdk.json  sdk.jsonic
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  agent-gateway.go  go.mod
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
go/core/: agent-gateway_sdk.go  config.go  context.go  operation.go  registry.go  response.go  result.go  target.go  types.go
go/entity/: analytics_entity.go  api_key_entity.go  balance_entity.go  meta_entity.go  (+3 more)
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  agent-gateway.rockspec  agent-gateway_sdk.lua  agent-gateway_types.lua  config.lua  features.lua
php/: AGENTS.md  CLAUDE.md  LICENSE  README.md  REFERENCE.md  agentgateway_sdk.php  composer.json  config.php  features.php
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  agentgateway_sdk.py  agentgateway_types.py  config.py  features.py  pyproject.toml
py/core/: context.py  control.py  error.py  response.py  spec.py
py/entity/: analytics_entity.py  api_key_entity.py  balance_entity.py  meta_entity.py  payment_entity.py  service_entity.py
py/feature/: audit_feature.py  cache_feature.py  debug_feature.py  log_feature.py  proxy_feature.py  rbac_feature.py  test_feature.py
py/test/: runner.py  test_analytics_direct.py  test_analytics_entity.py  test_api_key_entity.py  test_balance_direct.py  test_balance_entity.py  test_exists.py  test_feature.py  test_meta_direct.py  test_meta_entity.py  test_netsim.py  test_payment_direct.py  test_payment_entity.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py  test_service_direct.py  test_service_entity.py
py/utility/: done.py  feature_add.py  make_error.py  make_options.py  make_point.py  make_request.py  make_response.py  make_result.py  make_spec.py  make_url.py  param.py  prepare_auth.py  prepare_headers.py  prepare_params.py  prepare_path.py  prepare_query.py  result_basic.py  transform_request.py
rb/: AGENTS.md  AgentGateway_sdk.gemspec  AgentGateway_sdk.rb  AgentGateway_types.rb  CLAUDE.md  README.md  REFERENCE.md  config.rb  features.rb
ts/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  package-lock.json  package.json
(+464 files in other folders)
